2007-08-28  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-uri-replace-alist): Add key of "alc:".
	(w3m-relationship-estimate-rules): Add alc's rule.
	(w3m-relationship-alc-estimate): New function.

	* w3m-search.el (w3m-search-engine-alist): Add rule of
	http://eow.alc.co.jp/.

	* w3m-filter.el (w3m-filter-rules): Add w3m-filter-alc.
	(w3m-filter-alc): New function. Supper `goFairWord'.

2007-08-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-mailto-url): Make it work even with no rfc2368.el.

2007-08-21  Eugene Oleinik  <eo@aoizora.org>

	* w3m-filter.el (w3m-filter-google-separator): New user option.
	(w3m-filter-google): Replace hard-coded ones with it.
	(w3m-filter): Iterate through all cases in w3m-filter-rules.
	(w3m-filter-replace-regexp): New function.

2007-08-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-detect-xml-type): New function that treats
	application/xml looking like xhtml+xml as text/html.
	(w3m-content-type-alist): Use it for application/xml.
	(w3m-w3m-parse-header): Parse Alternates header for a real url.
	(w3m-w3m-retrieve-1): Retrieve real url according to Alternates header.
	(w3m-external-view): Treat xhtml+xml as html.

2007-07-30  Naohiro Aota  <nao.aota@gmail.com>

	* w3m-form.el: Changes to download contents after submitting form.
	(w3m-form-download): New variable.
	(w3m-fontify-textareas, w3m-form-parse-and-fontify): Combine the above
	variable into expressions which represent form actions.
	(w3m-form-submit): Accept and optional argument `download'.

	* w3m.el: Changes to download contents after submitting form.
	(w3m-download): Accept and optional argument `post-data'.
	(w3m-download-this-url): `w3m-form-download' is binded locally.
	(w3m-view-this-url): Ditto.
	(w3m-submit-form): Ditto.

2007-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ucs.el (font-ccl-encoder-alist): Bind it for XEmacs 21.5.

2007-07-26  Katsumi Yamaoka  <yamaoka@jpl.org>
